# cript

./: .gitignore  Cargo.toml  Cript.toml  README.md  flake.nix
src/: config.rs  lib.rs  main.rs  secret.rs
test/: README.md  test.cript  test.md
